Bug 1337303 - Corrected RFC number cited in comments. r=mcmanus

MozReview-Commit-ID: eg1NRMeb5G

--HG--
extra : rebase_source : 5ba14360e3acf6652d3152109dea9945513b3271