netwerk/protocol/http/nsHttpChunkedDecoder.cpp
@@ -27,7 +27,7 @@ nsHttpChunkedDecoder::HandleChunkedContent(char *buf,
 
     *contentRead = 0;
 
-    // from RFC2617 section 3.6.1, the chunked transfer coding is defined as:
+    // from RFC2616 section 3.6.1, the chunked transfer coding is defined as:
     //
     //   Chunked-Body    = *chunk
     //                     last-chunk
